--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="utf-8">
-    <title>João Rodrigues Lopes</title>
+    <title>João Rodrigues</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Fira+Sans:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
