--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Fira+Sans:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/components/tittle.css">
+    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -24,7 +25,7 @@
         </nav>
     </header>
     <h1>João Rodrigues</h1>
-
+    
     <h2>FrontEnd Developer</h2>
 </body>
 </html>
