--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Fira+Sans:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/components/title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 <body>
     <header>
@@ -24,8 +25,10 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <h1>João Rodrigues</h1>
-    
-    <h2>FrontEnd Developer</h2>
+
+    <div id="box">
+        <h1>João Rodrigues</h1>
+        <h2>FrontEnd Developer</h2>
+    </div>
 </body>
 </html>
