--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Fira+Sans:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="assets/img/rahninja.jfif" alt="Avatar do João Rodrigues">
+        <img src="assets/img/original.png" alt="Avatar do João Rodrigues">
 
         <nav>
             <a class="action" href="" lang="en">Skills</a>
@@ -30,11 +30,14 @@
         </nav>
     </header>
 
-    <div class="box">
-        <h1 class="title">João Rodrigues</h1>
-        <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
-    <a class="button" href="" lang="en">Download CV</a>
-    <a class="button" href="">Contatos</a>
+    <section class="banner">
+        <div class="box">
+            <h1 class="title">João Rodrigues</h1>
+            <h2 class="subtitle">FrontEnd Developer</h2>
+        </div>
+        <a class="button" href="" lang="en">Download CV</a>
+        <a class="button" href="">Contatos</a>
+    </section> 
+
 </body>
 </html>
