--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -43,7 +44,9 @@
             </div>
         </div>
     </section> 
-    <h3 class="title -second"> Skills</h3>
 
+    <section class="section">
+        <h3 class="title -second"> Skills</h3>
+    </section>
 </body>
 </html>
