--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
 
 </head>
 <body>
     <header class="header">
-        <img src="assets/img/original.png" alt="Avatar do João Rodrigues">
+        <img src="assets/img/logo.png" alt="Avatar do João Rodrigues">
 
         <nav>
             <a class="action" href="" lang="en">Skills</a>
@@ -126,5 +127,17 @@
             </article>
     </div>
     </section>
+
+    <section class="section">
+        <figure class="card-project">
+            <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
+        </figure>
+        <figure class="card-project -blue">
+            <img class="card-project -blue" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+        </figure>
+        <figure class="card-project">
+            <img class="card-project" src="img/original.png" alt="Logo do Portfólio">
+        </figure>
+    </section>   
 </body>
 </html>
