Add the variations in section component

--- a/index.html
+++ b/index.html
@@ -128,7 +128,10 @@
     </div>
     </section>
 
-    <section class="section">
+    <section class="section -bgBlack -bdFirst">
+
+        <h2 class="main-title -second">Projetos</h2>
+
         <figure class="card-project">
             <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
         </figure>
