--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/components/skill-tec.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
 
 </head>
@@ -132,15 +133,17 @@
 
         <h2 class="main-title -second">Projetos</h2>
 
-        <figure class="card-project">
-            <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
-        </figure>
-        <figure class="card-project -blue">
-            <img class="card-project -blue" src="img/logo-collabcode.png" alt="Logo da CollabCode">
-        </figure>
-        <figure class="card-project">
-            <img class="card-project" src="img/original.png" alt="Logo do Portfólio">
-        </figure>
+        <div class="wrapper-card">
+            <figure class="card-project">
+                <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
+            </figure>
+            <figure class="card-project -blue">
+                <img class="card-project -blue" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+            </figure>
+            <figure class="card-project">
+                <img class="card-project" src="img/original.png" alt="Logo do Portfólio">
+            </figure>
+        </div>
     </section>   
 </body>
 </html>
