--- a/index.html
+++ b/index.html
@@ -134,15 +134,23 @@
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-card">
-            <figure class="card-project">
-                <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
-            </figure>
-            <figure class="card-project -blue">
-                <img class="card-project -blue" src="img/logo-collabcode.png" alt="Logo da CollabCode">
-            </figure>
-            <figure class="card-project">
-                <img class="card-project" src="img/original.png" alt="Logo do Portfólio">
-            </figure>
+            <a href="https://www.firedlabs.com" target="_blank">
+                <figure class="card-project">
+                    <img class="card-project" src="img/logo-firedlabs@2x.png" alt="Logo da FiredLabs">
+                </figure>
+            </a>
+
+            <a href="https://collabcode.training" target="_blank">
+                <figure class="card-project -blue">
+                    <img class="card-project -blue" src="img/logo-collabcode.png" alt="Logo da CollabCode">
+                </figure>
+            </a>
+
+            <a href="https://joaorodriguesdev.github.io/">
+                <figure class="card-project">
+                    <img class="card-project" src="img/original.png" alt="Logo do Portfólio">
+                </figure>
+            </a>  
         </div>
     </section>   
 </body>
