--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
+    <link rel="stylesheet" href="css/components/main-descreption.css">
 
 </head>
 <body>
@@ -152,6 +153,17 @@
                 </figure>
             </a>  
         </div>
+    </section>
+    
+    <section class="main-section -bgPink -bdSecond">
+
+        <h2 class="main-title -second">Sobre</h2>
+
+        <div class="main-descreption">
+            Graduando em Gestão da Tecnologia da Informação e começando na vida de FrontEnd Dev.
+
+        </div>
+
     </section>   
 </body>
 </html>
