Change the descreption to description component

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
-    <link rel="stylesheet" href="css/components/main-descreption.css">
+    <link rel="stylesheet" href="css/components/main-description.css">
 
 </head>
 <body>
@@ -159,10 +159,10 @@
 
         <h2 class="main-title -second">Sobre</h2>
 
-        <div class="main-descreption">
+        <p class="main-description">
             Graduando em Gestão da Tecnologia da Informação e começando na vida de FrontEnd Dev.
 
-        </div>
+        </p>
 
     </section>   
 </body>
