--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/main-description.css">
+    <link rel="stylesheet" href="css/components/button-arrow.css">
 
 </head>
 <body>
@@ -164,6 +165,8 @@
 
         </p>
 
+        <button class="button-arrow -left"><span class="content">Avançar</span></button>
+        <button class="button-arrow -right"><span class="content">Voltar</span></button>
     </section>   
 </body>
 </html>
