Create the node-card component

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/main-description.css">
     <link rel="stylesheet" href="css/components/button-arrow.css">
+    <link rel="stylesheet" href="css/components/node-card.css">
 
 </head>
 <body>
@@ -131,7 +132,7 @@
     </div>
     </section>
 
-    <section class="main-section -bgBlack -bdFirst">
+    <section class="main-section -bgMagenta -bdFirst">
 
         <h2 class="main-title -second">Projetos</h2>
 
@@ -166,6 +167,13 @@
         </p>
 
         <button class="button-arrow -left"><span class="content">Avançar</span></button>
+            <figure class="node-card">
+                <figcaption class="title">2012</figcaption>
+                <div class="logo">
+                    <img src="img/logo-locaweb.png" alt="Logo da Locaweb">
+                </div>    
+            </figure>            
+
         <button class="button-arrow -right"><span class="content">Voltar</span></button>
     </section>   
 </body>
